[gd_scene load_steps=10 format=3 uid="uid://c30r2vbecu44d"]

[ext_resource type="Script" path="res://Player Controller/PlayerController.gd" id="1_1c3dk"]
[ext_resource type="Script" path="res://Player Controller/InteractionController.gd" id="2_eradf"]
[ext_resource type="ArrayMesh" uid="uid://0lflm7qa17jy" path="res://Models/Lantern/Lantern.obj" id="3_kxswj"]
[ext_resource type="Script" path="res://Inventory/Inventory.gd" id="3_p2kwb"]
[ext_resource type="PackedScene" uid="uid://cbkrq4u8m0qvg" path="res://Inventory/InventorySlot.tscn" id="4_2afjl"]
[ext_resource type="Material" uid="uid://cx3b2ijwm8h7q" path="res://Models/Lantern/LanternGlass.tres" id="4_k4taa"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_irf6d"]
radius = 0.3
height = 1.8

[sub_resource type="LabelSettings" id="LabelSettings_lxv6f"]
font_size = 23

[sub_resource type="LabelSettings" id="LabelSettings_ka0cv"]
font_size = 24

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_1c3dk")

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_irf6d")

[node name="Camera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
current = true
fov = 60.0

[node name="InteractionController" type="RayCast3D" parent="Camera"]
target_position = Vector3(0, 0, -2)
script = ExtResource("2_eradf")

[node name="InteractionPrompt" type="Label" parent="Camera/InteractionController"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -215.0
offset_top = -29.0
offset_right = 215.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_lxv6f")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Lantern" type="Node3D" parent="Camera"]
transform = Transform3D(0.864775, 0, -0.50216, 0, 1, 0, 0.50216, 0, 0.864775, 0.48399, 0, -0.494995)

[node name="Model" type="MeshInstance3D" parent="Camera/Lantern"]
transform = Transform3D(0.149654, 0, 0, 0, 0.149654, 0, 0, 0, 0.149654, 0, 0, 0)
cast_shadow = 0
mesh = ExtResource("3_kxswj")
surface_material_override/1 = ExtResource("4_k4taa")

[node name="OmniLight3D" type="OmniLight3D" parent="Camera/Lantern"]
light_color = Color(1, 0.741176, 0, 1)
light_energy = 2.0
shadow_enabled = true
omni_range = 20.0
omni_attenuation = 1.5

[node name="Inventory" type="Node" parent="."]
script = ExtResource("3_p2kwb")

[node name="InventoryWindow" type="Panel" parent="Inventory"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -180.0
offset_right = 280.0
offset_bottom = 188.0
grow_horizontal = 2
grow_vertical = 2

[node name="SlotContainer" type="GridContainer" parent="Inventory/InventoryWindow"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -260.0
offset_top = -167.0
offset_right = 260.0
offset_bottom = 145.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 5

[node name="InventorySlot" parent="Inventory/InventoryWindow/SlotContainer" instance=ExtResource("4_2afjl")]
layout_mode = 2

[node name="InventorySlot2" parent="Inventory/InventoryWindow/SlotContainer" instance=ExtResource("4_2afjl")]
layout_mode = 2

[node name="InventorySlot3" parent="Inventory/InventoryWindow/SlotContainer" instance=ExtResource("4_2afjl")]
layout_mode = 2

[node name="InventorySlot4" parent="Inventory/InventoryWindow/SlotContainer" instance=ExtResource("4_2afjl")]
layout_mode = 2

[node name="InventorySlot5" parent="Inventory/InventoryWindow/SlotContainer" instance=ExtResource("4_2afjl")]
layout_mode = 2

[node name="InventorySlot6" parent="Inventory/InventoryWindow/SlotContainer" instance=ExtResource("4_2afjl")]
layout_mode = 2

[node name="InventorySlot7" parent="Inventory/InventoryWindow/SlotContainer" instance=ExtResource("4_2afjl")]
layout_mode = 2

[node name="InventorySlot8" parent="Inventory/InventoryWindow/SlotContainer" instance=ExtResource("4_2afjl")]
layout_mode = 2

[node name="InventorySlot9" parent="Inventory/InventoryWindow/SlotContainer" instance=ExtResource("4_2afjl")]
layout_mode = 2

[node name="InventorySlot10" parent="Inventory/InventoryWindow/SlotContainer" instance=ExtResource("4_2afjl")]
layout_mode = 2

[node name="InventorySlot11" parent="Inventory/InventoryWindow/SlotContainer" instance=ExtResource("4_2afjl")]
layout_mode = 2

[node name="InventorySlot12" parent="Inventory/InventoryWindow/SlotContainer" instance=ExtResource("4_2afjl")]
layout_mode = 2

[node name="InventorySlot13" parent="Inventory/InventoryWindow/SlotContainer" instance=ExtResource("4_2afjl")]
layout_mode = 2

[node name="InventorySlot14" parent="Inventory/InventoryWindow/SlotContainer" instance=ExtResource("4_2afjl")]
layout_mode = 2

[node name="InventorySlot15" parent="Inventory/InventoryWindow/SlotContainer" instance=ExtResource("4_2afjl")]
layout_mode = 2

[node name="InfoText" type="Label" parent="Inventory/InventoryWindow"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -41.0
grow_horizontal = 2
grow_vertical = 0
label_settings = SubResource("LabelSettings_ka0cv")
horizontal_alignment = 1
vertical_alignment = 1
